kubernetes/kustomize/circle-partner-navigator/base/backend-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cpn-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpn-backend
  serviceName: cpn-backend-service
  template:
    metadata:
      labels:
        app: cpn-backend
    spec:
      serviceAccountName: cpn
      terminationGracePeriodSeconds: 10
      nodeSelector:
        topology.kubernetes.io/zone: eu-de-02
      containers:
      - name: cpn-backend
        image: quay.io/opentelekomcloud/circle-partner-navigator-backend
        ports:
        - containerPort: 8080
        command:
          ["/bin/sh", "-c"]
        args:
          ['source /secrets/cpn-env && npm run start']
        volumeMounts:
        - name: cpn-backend-persistent-storage
          mountPath: /opt/app/public/uploads
        - mountPath: "/secrets"
          name: "secrets"
      volumes:
      - name: vault-agent-config
        configMap:
          defaultMode: 493
          name: cpn-vault-config
      - name: secrets
        emptyDir:
          medium: Memory
          sizeLimit: 64Mi
      - name: "k8-tokens"
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              expirationSeconds: 7200
              path: "vault-token"
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: cpn-backend-persistent-storage
        labels:
          topology.kubernetes.io/zone: eu-de-02
        annotations:
          everest.io/disk-volume-type: "SAS"
          everest.io/disk-mode: "SCSI"
          everest.io/enterprise-project-id: "0"
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: csi-disk-retain
        volumeName: pvc-5c569e31-4f5f-420f-8d09-9ea8624ae166
        resources:
          requests:
            storage: 300Gi
