kubernetes/kustomize/circle-partner-navigator/base/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpn-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpn-front
  template:
    metadata:
      labels:
        app: cpn-front
    spec:
      containers:
        - name: cpn-front
          image: "swr.eu-de.otc.t-systems.com/t-cloud-public/circle-partner-navigator-frontend:change_1_latest"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cpn-front-nginx
              mountPath: /etc/nginx/conf.d/cpn-front-nginx.conf
              subPath: cpn-front-nginx.conf
              readOnly: true
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
      volumes:
        - name: cpn-front-nginx
          configMap:
            name: cpn-front-nginx
