kubernetes/kustomize/circle-partner-navigator/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpn-backend-service
spec:
  selector:
    app: cpn-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
