kubernetes/kustomize/circle-partner-navigator/base/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpn-front
spec:
  selector:
    app: cpn-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
