kubernetes/kustomize/circle-partner-navigator/base/cpn-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpn-front-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx
  rules:
    - host: partners.otc-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpn-front
                port:
                  number: 80
  tls:
    - hosts:
        - partners.otc-service.com
      secretName: cpn-front-tls
