kubernetes/kustomize/circle-partner-navigator/base/cpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpn-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: nginx
  rules:
    - host: strapi.partners.otc-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpn-backend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - strapi.partners.otc-service.com
      secretName: cpn-backend-tls
